# binleak

./: .binleak.toml  .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
rules/: example.yml
src/: cli.rs  config.rs  main.rs  scanner.rs
src/detector/: mod.rs  rules.rs
src/extractor/: ascii.rs  base64_decoder.rs  mod.rs  unicode.rs  xor.rs
src/parser/: elf.rs  macho.rs  mod.rs  pe.rs  raw.rs  wasm.rs
src/reporter/: json.rs  mod.rs  sarif.rs  text.rs
src/verifier/: aws.rs  generic.rs  github.rs  mod.rs  openai.rs  stripe.rs
tests/: integration_test.rs
